--- a/src/content/projects/giftoky.mdx
+++ b/src/content/projects/giftoky.mdx
@@ -5,6 +5,7 @@ title: Giftoky
 description: "Embark on a cosmic journey with astro.js, the framework that makes interstellar development a breeze. Pair it with Tailwind CSS for a design that's out of this world"
 images:
     [
+        "https://xvifyrqivqsozuhckqte.supabase.co/storage/v1/object/public/Images/giftoky/386shots_so.png?t=2024-11-17T17%3A31%3A00.008Z",
         "https://xvifyrqivqsozuhckqte.supabase.co/storage/v1/object/public/Images/giftoky/giftoky1.png?t=2024-07-07T06%3A56%3A36.918Z",
         "https://xvifyrqivqsozuhckqte.supabase.co/storage/v1/object/public/Images/giftoky/giftoky3.png?t=2024-07-07T06%3A56%3A51.842Z",
         "https://xvifyrqivqsozuhckqte.supabase.co/storage/v1/object/public/Images/giftoky/giftoky4.png?t=2024-07-07T06%3A56%3A58.555Z",
@@ -23,22 +24,22 @@ import { Image } from "astro:assets";
 
 <div className="flex flex-col laptop:flex-row laptop:items-center w-[80%] mx-auto px-4 self-center not-prose">
 <Image
+    src={frontmatter.images[0]}
+    alt="react"
+    width={1600}
+    height={900}
+    class="aspect-video object-contain rounded-md"
+/>
+</div>
+GIFTOKY® is an app that allows users to note and share gift ideas, transforming them into meaningful presents. Developed with React Native and Expo for the front-end, it ensures an efficient user experience, while the back-end is powered by Node.js and WordPress. The app facilitates the creation of personalized wish lists and social interaction, enabling users to follow friends' profiles and anonymously reserve gifts.
+<div className="flex flex-col laptop:flex-row laptop:items-center w-[80%] mx-auto px-4 self-center not-prose">
+
+<Image
     src='https://xvifyrqivqsozuhckqte.supabase.co/storage/v1/object/public/Images/giftoky/giftoky1.png?t=2024-07-07T06%3A56%3A36.918Z'
     alt="react"
     width={1600}
     height={900}
     class="aspect-video object-contain rounded-md "
-/>
-
-</div>
-GIFTOKY® is an app that allows users to note and share gift ideas, transforming them into meaningful presents. Developed with React Native and Expo for the front-end, it ensures an efficient user experience, while the back-end is powered by Node.js and WordPress. The app facilitates the creation of personalized wish lists and social interaction, enabling users to follow friends' profiles and anonymously reserve gifts.
-<div className="flex flex-col laptop:flex-row laptop:items-center w-[80%] mx-auto px-4 self-center not-prose">
-<Image
-    src='https://xvifyrqivqsozuhckqte.supabase.co/storage/v1/object/public/Images/giftoky/giftoky3.png?t=2024-07-07T06%3A56%3A51.842Z'
-    alt="react"
-    width={1600}
-    height={900}
-    class="aspect-video object-contain rounded-md"
 />
 </div>
 GIFTOKY® streamlines gift planning and prevents duplicate presents, offering a free and accessible solution to enhance the quality and significance of received gifts. I joined the project after a year of prior development, resuming the paused work and successfully getting the app to work correctly on both iOS and Android. The app is now entering a public beta phase, welcoming users to test its features and provide feedback.
