--- a/src/content/projects/music.mdx
+++ b/src/content/projects/music.mdx
@@ -12,14 +12,14 @@ import VideoPlayer from "../../components/atoms/VideoPlayer.tsx";
   <PostSubtitle title="Tormenta China" color="bg-violet" />
 </div>
 <div>
-  <div class="float-left w-1/2 pr-4">
+  <div class="tablet:float-left tablet:w-1/2 ">
     Tormenta China was a rock band born to serve Santiago’s underground rock
     scene. Named after the racehorse Tormenta China, famously bet on by Juan
     Carlos Bodoque, the band’s fate mirrored that of the horse—it never won a
     race. Just like its namesake, the band delved deep into the underground,
     becoming a cult figure in Chilean progressive rock.
   </div>
-  <div class="float-left w-1/2">
+  <div class="tablet:float-left tablet:w-1/2">
     <VideoPlayer client:only videolink="gtEFzFjYPhE" />
   </div>
   <div class="clear-both"></div>
@@ -29,10 +29,10 @@ import VideoPlayer from "../../components/atoms/VideoPlayer.tsx";
   <PostSubtitle title="Bichonauta" color="bg-darkpurple" />
 </div>
 <div>
-  <div class="float-left w-1/2">
+  <div class="tablet:float-left tablet:w-1/2">
     <VideoPlayer client:only videolink="Bpzuv3InXcw" />
   </div>
-  <div class="float-left w-1/2 pl-4">
+  <div class="tablet:float-left tablet:w-1/2 pl-4">
     Bichonauta is a rock/pop band from Santiago de Chile, featuring Agustín
     Rojas, Pascal Chaperón, Pablo Vergara, and Camilo Ortega. Their unique
     approach involves storytelling and creating narratives through their music
@@ -43,24 +43,24 @@ import VideoPlayer from "../../components/atoms/VideoPlayer.tsx";
 </div>
 
 <div class="not-prose mt-9 mb-3">
-  <PostSubtitle title="Other Musical Projects" color="bg-ocre" />
+  <PostSubtitle title="Other Musical Projects" color="bg-ocre !h-24" />
 </div>
 
 <div>
-    <div class="float-left w-1/2 pr-4">
+    <div class="tablet:float-left tablet:w-1/2 pr-4">
 I also took part in an experimental project known informally as Quebrada Radiocontrol.
 This project was more than just music—it included experimental videos as well.
     </div>
-    <div class="float-left w-1/2">
+    <div class="tablet:float-left tablet:w-1/2">
     <VideoPlayer client:only videolink="wxx3oMa7NVk" />
     </div>
     <div class="clear-both"></div>
 </div>
 <div class='pt-4'>
-    <div class="float-left w-1/2 pr-4">
+    <div class="tablet:float-left tablet:w-1/2 pr-4">
 As a solo artist I created an album called Caracol by compiling old sheet music, with each track offering something completely different from the rest.
     </div>
-    <div class="float-left w-1/2">
+    <div class="tablet:float-left tablet:w-1/2">
     <VideoPlayer client:only videolink="gcWX9h0yMQw" />
     </div>
     <div class="clear-both"></div>
