--- a/src/content/projects/arts.mdx
+++ b/src/content/projects/arts.mdx
@@ -26,13 +26,13 @@ Take a look at the different kinds of art I've made over my lifetime. I've worke
 My work includes shaping and painting with ceramics and acrylics. I have also ventured into digital artwork, creating pieces that feel both new and timeless. I've also worked on radiotheater projects, creating stories that are both engaging and immersive. I've used sound to create a world that listeners can get lost in, making them feel like they're part of the story.
 
 <div class="not-prose mt-9 mb-3">
-  <PostSubtitle title="Sigma - Metro de Santiago" color="bg-darkpurple" />
+  <PostSubtitle title="Sigma - Metro de Santiago" color="bg-darkpurple !h-24" />
 </div>
 <div class='not-prose'>
-  <div class="float-left w-1/2">
+  <div class="tablet:float-left tablet:w-1/2 py-4">
     <VideoPlayer client:only videolink={frontmatter.link}/>
   </div>
-  <div class="float-left w-1/2 pl-4">
+  <div class="tablet:float-left tablet:w-1/2 pl-4">
     This is a piece of radio theatre, created in a time when I was exploring the world of cosmic horror, Lovecraftian themes, and the idea of the unknown. The story is set in the Santiago Metro, where the train conducer find himself in a situation that is both terrifying and mysterious. The piece was created using sound effects, and voice acting to create an immersive experience for the listener. For my surprise, the audio became a viral creepypasta through the internet and was shared in many forums and social media, inspiring other artists to create their own versions of the story. An installation of this piece was also presented at the Faculty of Arts of the University of Chile.
   </div>
   <div class="clear-both"></div>
@@ -42,7 +42,7 @@ My work includes shaping and painting with ceramics and acrylics. I have also ve
   <PostSubtitle title="Paintings" color="bg-ocre" />
 </div>
  So, here are some of the artworks I've made over the years. I've worked with acrylics, oils, ceramics and charcoal, each one giving me a new way to express myself. I've painted landscapes, portraits, and abstract pieces, each one telling a different story. I've also experimented with different styles and techniques, pushing myself to try new things and see what works best for me.
-<div class='h-[43rem]'>
+<div class='tablet:h-[43rem]'>
  <EmblaCarousel slides={frontmatter.images} client:load/>
 </div>
 
