--- a/src/content/projects/asamblea.mdx
+++ b/src/content/projects/asamblea.mdx
@@ -8,6 +8,6 @@ link: wxx3oMa7NVk
 import VideoPlayer from '../../components/atoms/VideoPlayer.tsx'
 
 
-<VideoPlayer client:only videolink={frontmatter.link}/>
+<VideoPlayer client:load videolink={frontmatter.link}/>
 
 Another video of Quebrada Radiocontrol, a very strange one, Just enjoy.
