--- a/src/content/projects/cena.mdx
+++ b/src/content/projects/cena.mdx
@@ -8,6 +8,6 @@ link: xFmuDBHP8Uo
 import VideoPlayer from '../../components/atoms/VideoPlayer.tsx'
 
 
-<VideoPlayer client:only videolink={frontmatter.link}/>
+<VideoPlayer client:load videolink={frontmatter.link}/>
 
 Another Music Video I made for Bichonauta filmed in the mountains, where mysterious creatures dwell. This time I try some Stop Motion to generate another perception about these little gnomes. They did a great job as actors in this video, and the little friend too.
