--- a/src/content/projects/cruzando-rios-saltando-piedras.mdx
+++ b/src/content/projects/cruzando-rios-saltando-piedras.mdx
@@ -8,6 +8,6 @@ link: 5IuzqtMDwCk
 import VideoPlayer from '../../components/atoms/VideoPlayer.tsx'
 
 
-<VideoPlayer client:only videolink={frontmatter.link}/>
+<VideoPlayer client:load videolink={frontmatter.link}/>
 
 This is the first music video I made for the band Bichonauta, made with my friends through a journey to 'Quebrada El Manzano', Cajon del Maipo in Chile. I did the video editing and some camera too. The little friend was handmade by another little friend.
