--- a/src/content/projects/language-spin.mdx
+++ b/src/content/projects/language-spin.mdx
@@ -13,7 +13,7 @@ https://xvifyrqivqsozuhckqte.supabase.co/storage/v1/object/public/Images/languag
 
 import  ProjectImages  from '../../components/atoms/ProjectImages.tsx'
 
-    <ProjectImages client:only images={frontmatter.images}/>
+    <ProjectImages client:load images={frontmatter.images}/>
     
 This is a language course platform, I worked at this project as a team made up of the best students of the latest bootcamps of web development and web design at 'Coderhouse' an e-learning platform based in Argentina, so it was a excelent job experience and the result was this site made for a language course institute. They teach English, Spanish, Italian and Portuguese.
 
