--- a/src/content/projects/bichos.mdx
+++ b/src/content/projects/bichos.mdx
@@ -8,6 +8,6 @@ link: kn46FRoGDuk
 import VideoPlayer from '../../components/atoms/VideoPlayer.tsx'
 
 
-<VideoPlayer client:only videolink={frontmatter.link}/>
+<VideoPlayer client:load videolink={frontmatter.link}/>
 
 This is a music video I made for the band Bichonauta, with bugs nature and destruction. The main idea behind was to make a videocollage made with book clippings and use the illustrations of old books about nature and entomology. This took me 2 years of uninterrupted research and editing of the illustrations. Maybe the main source of those illustrations was the Biodiversity Heritage Library. In adition all these illustrations were animated in After Effects.
